# data-structures-from-scratch

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
Array/: path.txt
Array/Array/C/: array.c  array.h  example.c
Array/Array/C++/: Array.h  Example.cpp  Example.ilk
Array/BitArray/: BitArray.h
Array/DynamicArray/: DynamicArray.h  Example.cpp
Heap/: path.txt
LinkedList/: Example.cpp  ILinkedList.h
LinkedList/CircularLinkedList/: CircularLinkedList.h
LinkedList/DoublyCircularLinkedList/: DoublyCircularLinkedList.h
LinkedList/DoublyLinkedList/: DoublyLinkedList.h  Example.ilk
LinkedList/SinglyLinkedList/: Example.ilk  SinglyLinkedList.h
LinkedList/SinglyLinkedList_C/: example.c  singly_linked_list.c  singly_linked_list.h
Queue/: Example.cpp  Example.ilk  Iqueue.h  recommendetion.txt
Queue/ArrayBasedQueue/: ArrayBasedQueue.h
Queue/PriorityQueue/: PriorityQueue.h
Queue/SLLBasedQueue/: SLLBasedQueue.h
Stack/: path.txt
Stack/ArrayBasedStack/: ArrayBasedStack.h
Tree/BinaryTrees/: Example.cpp  IBinaryTree.h
examples/: array.cpp  binary_heap.cpp  binary_search_tree.cpp  binary_tree.cpp  bit_array.cpp  circular_linked_list.cpp  doubly_circular_linked_list.cpp  doubly_linked_list.cpp  dynamic_array.cpp  priority_queue.cpp  queue.cpp  singly_linked_list.cpp  stack.cpp
include/ds/: array.hpp  binary_heap.hpp  binary_search_tree.hpp  binary_tree.hpp  bit_array.hpp  circular_linked_list.hpp  doubly_circular_linked_list.hpp  doubly_linked_list.hpp  dynamic_array.hpp  priority_queue.hpp  queue.hpp  singly_linked_list.hpp  stack.hpp
(+2 files in other folders)
